...

    public var title: String {
        switch self {
        case .home: "Home"
        case .menuBar: "Menu Bar"
        case .automation: "Automation"
        case .privacy: "Privacy"
        case .about: "About"
        }
    }

    public var symbol: String {
        switch self {
...
